# todo-tasks

server/: .env  Cargo.toml  README.md  docker-compose.yml
server/migrations/: 20250812203823_users_table.sql  20250819020438_users_avatar_table.sql  20250819021504_add_mime_type_avatar_table.sql  20250820204442_avatar_url_into_users_table.sql  20250820205026_remove_avatar_url_from_users_table.sql  20251003150518_tasks.sql  20251004023144_update_task_table.sql
server/signed_url_api/: README.md  package-lock.json  package.json  request.http
server/signed_url_api/src/: env.ts  server.ts
server/signed_url_api/src/lib/: cloudflare.ts
server/src/: env.rs  main.rs  startup.rs
server/src/app/entities/: avatar.rs  mod.rs  task.rs  task_status.rs  user.rs
server/src/app/repositories/: mock_user_repository.rs  mod.rs  task_repository.rs  user_repository.rs
server/src/app/use_cases/: create_user_session_use_case.rs  create_user_session_use_case_test.rs  get_signed_url_use_case.rs  get_signed_url_use_case_test.rs  get_user_profile_use_case.rs  list_all_tasks_use_case.rs  mod.rs  register_user_use_case.rs  register_user_use_case_test.rs  save_task_use_case.rs  update_task_status_use_case.rs
server/src/infra/: mod.rs
server/src/infra/db/: configuration.rs  mod.rs  sqlx_repository.rs
server/src/infra/http/: create_user_session_controller.rs  get_user_profile_controller.rs  list_all_user_tasks_controller.rs  mod.rs  register_user_controller.rs  save_task_controller.rs  update_task_status_controller.rs
server/src/routes/: get_signed_url.rs  mod.rs  register_user.rs
(+32 files in other folders)
