[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
actix-cors = "0.7.1"
reqwest = {version = "0.12.23", features = ["json"]}
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1"
dotenv = "0.15.0"
argon2 = "0.5.3"
mockito = "1.7.0"
jsonwebtoken = "9.3.1"
chrono = "0.4.41"



[dependencies.sqlx]
version = "0.8.6"
features = [
    "runtime-tokio-rustls", "postgres", "uuid", "migrate", "time"
]

[dependencies.uuid]
version =  "*"
features = ["v4"]
